@@ -11,6 +11,7 @@ Version 1.9.0-svn:
    * Added a window register framework
    * Enabled the --new-widgets MP create dialog again
    * Enable the hidden join observe buttons per row
+   * New option to auto-set delay shroud update on game start
 
 Version 1.8.0:
  * AI:
